--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
   "name": "proshop",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "main": "server.js",
+  "scripts": {
+    "start": "node ./backend/server",
+    "server": "nodemon ./backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "import:data": "node backend/seeder",
+    "destroy:data": "node backend/seeder -d"
+  },
+  "keywords": [],
+  "author": "Abhijeet Mukherjee",
+  "license": "ISC",
+  "description": "proshop",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.15"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
+  }
 }
